# patchtool

./: .PatchMgr.py.swp  .setup.py.swp  BugMod.cpp  BugMod.h  CMakeLists.txt  CODE_OF_CONDUCT.md  Fake.py  July 26  Parser.cpp  Parser.h  Patch.h  Patch.py  PatchMgr.py  Playground  Playground.cpp  Playground.h  README.md  a  a.cpp  a.out  basic_structs.cpp  basic_structs.h  display_patch.py  m.py  macros.h  main.c  main.py  patch-list1  patchtool.py  pg.cpp  ppp.txt  sample_bug.txt  sample_new.txt  search.py  setup.py  setup.sh  spider.py  storage.json  test  test.cpp  (+3 more)
Cache/: cbc42e4c979f69f0_0
Cache/index-dir/: the-real-index
cpp_history/: BugMod.cpp  basic_structs.cpp  basic_structs.h
patchtool/: Fake.py  main.py  test.py
patchtool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: patchtool.py
